--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root{
+    --bg-color: rgb(202, 225, 238);
+    --red-bg: #ff523b;
+}
 *{
     margin: 0;
     padding: 0;
@@ -7,6 +11,8 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+
+
 
 .navbar{
     display: flex;
@@ -31,12 +37,27 @@ nav ul li{
 
 a{
     text-decoration: none;
-    color: #555;
+    /* color: #555; */
+    color: black;
 }
 
 p{
-    color: #555;
+    color: black;
 }
+
+
+
+.logo{
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color:black;
+    text-transform: uppercase;
+  }
+.logo span{
+    color: blue;
+  }
+  
+
 
 .container{
     max-width: 1300px;
@@ -70,7 +91,7 @@ p{
 
 .btn{
     display: inline-block;
-    background: #ff523b;
+    background: blue;
     color: #fff;
     padding: 8px 30px;
     margin: 30px 0;
@@ -79,17 +100,20 @@ p{
 }
 
 .btn:hover{
-    background: #563434;
+    background: black;
+    color: white;
 }
 
 .header{
-    background: radial-gradient(#fff, #ffd6d6);
+    /* background: radial-gradient(#fff, #ffd6d6); */
+    background: var(--bg-color)
 }
 
 .header .row{
     margin-top: 70px;
 
 }
+
 
 .categories{
     margin: 70px 0;
@@ -99,11 +123,39 @@ p{
     flex-basis: 30%;
     min-width: 250px;
     margin-bottom: 30px;
+    overflow: hidden;
+    position: relative;
 }
 
 .col-3 img{
     width: 100%;
 }
+
+.content{
+    position: absolute;
+  top:-100%; left:0;
+  height: 100%;
+  width:100%;
+  text-align: center;
+  background:rgba(0,0,0,.7);
+  padding: 12px;
+}
+
+.col-3:hover .content{
+    top: 0%;
+}
+
+.col-3:hover .content h3{
+    font-size: 32px;
+  color: blue;
+}
+
+.col-3:hover .content p{
+    font-size: 18px;
+  color:#eee;
+  padding:.5rem 0;
+}
+
 
 .small-container{
     max-width: 1080px;
@@ -134,7 +186,7 @@ p{
 
 .title::after{
     content: '';
-    background: #ff523b;
+    background: blue;
     width: 80px;
     height: 5px;
     border-radius: 5px;
@@ -164,7 +216,7 @@ h4{
 
 /* Offer */
 .offer{
-    background: radial-gradient(#fff, #ffd6d6);
+    background: var(--bg-color);
     margin-top: 80px;
     padding: 30px 0;
 }
@@ -278,6 +330,17 @@ small{
     text-align: center;
 }
 
+.footer-col-2 .logo{
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color:white;
+    text-transform: uppercase;
+}
+
+.footer-col-2 .logo span{
+    color: blue;
+}
+
 ul{
     list-style-type: none;
 }
@@ -344,7 +407,7 @@ ul{
  }
 
  select{
-     border: 1px solid #ff523b;
+     border: 1px solid blue;
      padding: 5px;
 
  }
@@ -360,7 +423,7 @@ ul{
 
  .page-btn span{
      display: inline-block;
-     border: 1px solid #ff523b;
+     border: 1px solid blue;
      margin-left: 10px;
      width: 40px;
      height: 40px;
@@ -370,7 +433,7 @@ ul{
  }
 
  .page-btn span:hover{
-     background: #ff523b;
+     background: blue;
      color: white;
  }
 
@@ -407,7 +470,7 @@ ul{
      padding-left: 10px;
      font-size: 20px;
      margin-right: 10px;
-     border: 1px solid #ff523b
+     border: 1px solid blue;
 }
 
 input:focus{
@@ -415,7 +478,7 @@ input:focus{
 }
 
 .single-product .fa{
-    color: #ff523b;
+    color: blue;
     margin-left: 10px;
 }
 
@@ -447,9 +510,9 @@ table{
 
 th{
     text-align: left;
-    padding: 5px;
+    padding: 12px;
     color: #fff;
-    background: #ff523b;
+    background: blue;
     font-weight: normal;
 }
 
@@ -464,7 +527,7 @@ td input{
 }
 
 td a{
-    color: #ff523b;
+    color: blue;
     font-size: 12px;
 }
 
@@ -480,7 +543,7 @@ td img{
 }
 
 .total-price table{
-    border-top: 3px solid #ff523b;
+    border-top: 3px solid blue;
     width: 100%;
     max-width: 400px;
 }
@@ -496,7 +559,7 @@ th:last-child{
 /* Account Page*/
 .account-page{
     padding: 50px 0;
-    background: radial-gradient(#fff, #ffd6d6);
+    background: var(--bg-color);
 
 }
 
@@ -569,7 +632,7 @@ form a{
 #Indicator{
     width: 100px;
     border: none;
-    background: #ff523b;
+    background: blue;
     height: 3px;
     margin-top: 8px ;
     transform: translateX(100px);
